fixes some content form layout

--- a/connect.html
+++ b/connect.html
@@ -13,14 +13,8 @@ subtitle="If you’re doing good work in your community, we want to hear from yo
 image="/assets/images/pages/connect/connect.jpg"
 %}
 
-
-<section>
-  <div class="container-full-width">
-    <div class="bento-image-wrapper">
-      <img src="/assets/images/pages/connect/jump.jpg" class="bento-image circle" />
-    </div>
-    {% include contact-form.html %}
-  </div>
+<section class="">
+  {% include contact-form.html %}
 </section>
 
 <section class="bg-red">
