--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ cta_url="/connect"
 <section class="bg-red">
   <div class="container column">
     <div class="heading-container">
-      <h2>Our Value to You</h2>
+      <h2>Welcome to Rize Digital!</h2>
       <p class="subtitle">
-        You're doing important work—serving your community, telling your story, organizing change. We're here to make the digital side of that work easier, more effective, and more empowering. We help nonprofits, grassroots organizations, educators, and entrepreneurs:
+        We're here to make the digital side of that work easier, more effective, and more empowering. We help nonprofits, grassroots organizations, educators, and entrepreneurs:
       </p>
     </div>
   </div>
@@ -28,18 +28,18 @@ cta_url="/connect"
 <section class="bg-light">
   <div class="container column">
     <div class="bento-container">
-      <ul class="bento-grid bento-grid--three-col">
+      <ul class="">
         <li class="bento-section">
-          <h3>Establish a strong, welcoming digital presence</h3>
+          <p>Establish a strong, welcoming digital presence</p>
         </li>
         <li class="bento-section">
-          <h3>Reach and engage their audience through thoughtful strategy</h3>
+          <p>Reach and engage their audience through thoughtful strategy</p>
         </li>
         <li class="bento-section">
-          <h3>Navigate tech with confidence—no matter their experience level</h3>
+          <p>Navigate tech with confidence—no matter their experience level</p>
         </li>
         <li class="bento-section">
-          <h3>Find the right tools that match their needs, values, and budget</h3>
+          <p>Find the right tools that match their needs, values, and budget</p>
         </li>
       </ul>
     </div>
@@ -56,7 +56,7 @@ cta_url="/connect"
       </div>
       <div class="bento-section bento-grid">
         <div class="heading-container--sm">
-          <h3>About Rize Digital</h3>
+          <h3>Our Mission</h3>
         </div>
         <div class="about-content">
           <p class="intro">
@@ -65,10 +65,10 @@ cta_url="/connect"
 
           <h4>We are committed to:</h4>
           <ul class="">
+            <li>Using tech to uplift</li>
             <li>Empowering people through education</li>
-            <li>Creating inclusive and accessible design</li>
+            <li>Creating inclusive and accessible solutions</li>
             <li>Supporting nonprofits and underrepresented communities</li>
-            <li>Using tech to uplift, not extract</li>
             <li>Building long-term relationships with care and accountability</li>
           </ul>
         </div>
