--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@ paragraphs="Establish a strong, welcoming digital presence|Reach and engage thei
           class="bento-image" />
       </div>
       <div class="bento-section bento-grid">
-        <div class="heading-container--sm">
-          <h3>Our Mission</h3>
-        </div>
+        {% include heading.html
+        heading="Our Mission"
+        small=true
+        %}
         <div class="about-content">
           <p class="intro">
             Rize Digital is a community-first consultancy that helps organizations use technology with confidence and clarity. We believe in digital tools that are accessible, culturally informed, and grounded in real needs—not trends.
