--- a/rize.html
+++ b/rize.html
@@ -34,9 +34,9 @@ services="Staff onboarding and documentation|One-on-one or team training session
 <!-- Section - What We Help You Do -->
 <section>
   <div class="container">
-    <div class="heading-container">
-      <h2>What We Help You Do</h2>
-    </div>
+    {% include heading.html
+    heading="What We Help You Do"
+    %}
     <div class="bento-container">
       {% include feature.html
       title="Build Your Strategy"
