--- a/build.html
+++ b/build.html
@@ -13,27 +13,23 @@ image="/assets/images/pages/build/hero-build.jpg"
 <!-- Section -->
 <section class="bg-red">
   <div class="container ">
-    <div class="heading-container">
-      <h2>Why Rize?</h2>
-      <p class="subtitle">
-        We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to "do it all" — and we build websites that work for real people, not just ideal scenarios.
-      </p>
-    </div>
+    {% include heading.html
+    heading="Why Rize?"
+    subheading="We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to 'do it all' — and we build websites that work for real people, not just ideal scenarios."
+    %}
   </div>
 </section>
 
 <!-- Section - What We Do -->
 <section>
   <div class="container column">
-    <div class="heading-container">
-      <h2>Let's Build</h2>
-      <p class="subtitle">
-        Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience.
-      </p>
-      <p>
-        We don't just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
-      </p>
-    </div>
+    {% include heading.html
+    heading="Let's Build"
+    subheading="Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience."
+    %}
+    <p>
+      We don't just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
+    </p>
     <div class="bento-container">
       {% include feature.html
       title="Custom Websites"
