--- a/connect.html
+++ b/connect.html
@@ -8,8 +8,8 @@ permalink: /connect/
 
 <!-- Hero -->
 {% include hero.html
-title="Let’s Talk!"
-subtitle="If you’re doing good work in your community, we want to hear from you. Let’s explore how we can help you grow your impact through thoughtful digital support."
+title="Let's Talk!"
+subtitle="If you're doing good work in your community, we want to hear from you. Let's explore how we can help you grow your impact through thoughtful digital support."
 image="/assets/images/pages/connect/connect.jpg"
 %}
 
@@ -26,10 +26,9 @@ image="/assets/images/pages/connect/connect.jpg"
 <!-- Section - Values -->
 <section class="bg-light">
   <div class="container">
-    <div class="heading-container">
-      <h2>Our Values</h2>
-      <!-- <p class="subtitle">We offer support where you need it most—always guided by care, clarity, and community.</p> -->
-    </div>
+    {% include heading.html
+    heading="Our Values"
+    %}
     <div class="bento-container">
       {% include feature.html
       title="Community Rooted"
