--- a/learn.html
+++ b/learn.html
@@ -15,21 +15,20 @@ cta_url="/contact"
 
 <section class="bg-red">
   <div class="container">
-    <div class="heading-container column">
-      <h2>How We Teach</h2>
-      <p>
-        Our workshops are designed for real people — not tech insiders. We use clear language, relevant examples, and culturally informed teaching to meet learners where they’re at. Sessions are available in-person or virtually, for individuals, small groups, and entire organizations.
-      </p>
-    </div>
+    {% include heading.html
+    heading="How We Teach"
+    subheading="Our workshops are designed for real people — not tech insiders. We use clear language, relevant examples, and culturally informed teaching to meet learners where they're at. Sessions are available in-person or virtually, for individuals, small groups, and entire organizations."
+    class="column"
+    %}
   </div>
 </section>
 
 <!-- Section - What We Offer -->
 <section>
   <div class="container">
-    <div class="heading-container">
-      <h2>What We Offer</h2>
-    </div>
+    {% include heading.html
+    heading="What We Offer"
+    %}
     <div class="bento-container">
       {% include feature.html
       title="Workshops for Organizations & Teams"
