--- a/build.html
+++ b/build.html
@@ -1,7 +1,12 @@
 ---
 layout: default
-title: Build
 permalink: /build/
+title: "Website & App Development | Build with Rize Digital"
+description: "Get a website that reflects your values and grows with your goals. We build accessible, strategic sites and apps for nonprofits, artists, and entrepreneurs."
+keywords: [website development, nonprofit website, Shopify help, WordPress expert, accessible web design, CMS setup]
+og_title: "Build Something Real – Websites & Apps by Rize Digital"
+og_description: "E-commerce, CMS setup, and custom tools—made simple and meaningful for your team or community."
+og_image: /assets/images/og-build.jpg
 ---
 <!-- Hero -->
 {% include hero.html
