--- a/connect.html
+++ b/connect.html
@@ -1,9 +1,12 @@
 ---
 layout: default
-title: Rize
-hero-title: Who We Are
-hero-subtitle: This is our story
 permalink: /connect/
+title: "Contact Rize Digital | Book a Project or Workshop"
+description: "Reach out to Rize Digital to book a session, start a project, or explore collaboration. We’re here to support your work and build together."
+keywords: [contact rize digital, book workshop, connect, website quote, nonprofit tech support, vancouver tech consultant]
+og_title: "Let’s Work Together — Connect with Rize Digital"
+og_description: "Have a project idea or question? Contact us to get started."
+og_image: /assets/images/og-connect.jpg
 ---
 
 <!-- Hero -->
