--- a/grow.html
+++ b/grow.html
@@ -1,8 +1,12 @@
 ---
 layout: default
-title: Grow
-hero-title: Grow
 permalink: /grow/
+title: "Digital Strategy & Tools | Grow with Rize Digital"
+description: "Marketing, systems, and tech support to help your team work smarter and reach more people—designed for nonprofits, collectives, and mission-led teams."
+keywords: [nonprofit tech, marketing strategy, digital fundraising, slack training, project management tools, tech coaching]
+og_title: "Grow Your Digital Impact with Systems That Work"
+og_description: "From email campaigns to internal tools, we help you implement tech that supports your mission—not distracts from it."
+og_image: /assets/images/og-grow.jpg
 ---
 
 <!-- Hero -->
