--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 ---
 layout: default
-title: Rize Digital
+title: "Rize Digital | Community-Focused Tech for Web, Strategy & Workshops"
+description: "Rize Digital helps nonprofits, creatives, and entrepreneurs build websites, systems, and skills to thrive in today’s digital world."
+keywords: [rize digital, web development, community tech, vancouver, nonprofit digital, digital equity, workshops]
+og_title: "Rize Digital – Uplifting Communities Through Tech"
+og_description: "Explore how we build websites, teach digital skills, and support changemakers with strategy and care."
+og_image: /assets/images/og-home.jpg
 ---
+
 
 <!-- Hero -->
 {% include hero.html
