--- a/learn.html
+++ b/learn.html
@@ -1,7 +1,12 @@
 ---
 layout: default
-title: Learn
 permalink: /learn/
+title: "Digital Workshops & Training | Learn with Rize Digital"
+description: "Hands-on digital workshops for individuals, teams, and communities—covering web, AI, e-commerce, and safety. Online and in-person."
+keywords: [digital workshops, nonprofit training, ai workshop, digital literacy, web skills, community education, tech for good]
+og_title: "Learn Digital Skills That Uplift Your Work"
+og_description: "Book a workshop or create one with us. We offer training that meets you where you’re at—culturally aware and skill-building focused."
+og_image: /assets/images/og-learn.jpg
 ---
 
 <!-- Hero -->
