Adds passing the section-centered params to heading

--- a/learn.html
+++ b/learn.html
@@ -23,17 +23,10 @@ bg_class="bg-red"
 heading="Learn at Your Level"
 paragraphs="Whether you're new to tech or looking to grow your skills, our workshops meet you where you are. We create safe, engaging learning spaces for communities, organizations, and individuals who want to do more with digital tools."
 is_list=false
+cta_text="Book a Session"
+cta_url="/contact"
 %}
 
-<section class="bg-red">
-  <div class="container">
-    {% include heading.html
-    heading="How We Teach"
-    subheading="Whether you're new to tech or looking to grow your skills, our workshops meet you where you are. We create safe, engaging learning spaces for communities, organizations, and individuals who want to do more with digital tools."
-    class="column"
-    %}
-  </div>
-</section>
 
 <!-- Section - What We Offer -->
 <section>
