adds learn content and some typography adjustments for titles and subtitles

--- a/learn.html
+++ b/learn.html
@@ -27,13 +27,14 @@ cta_text="Book a Session"
 cta_url="/contact"
 %}
 
-
-<!-- Section - What We Offer -->
+<!-- Section - Features -->
 <section>
   <div class="container">
     {% include heading.html
-    heading="Workshop Offerings"
+    heading="Workshops for Organizations & Teams"
+    subheading="Equip your team with practical knowledge to use digital tools with confidence. From improving workflows with tools like Slack and Google Workspace to managing your website and building an engaged community through accessible, values-based social media."
     %}
+
     <div class="bento-container">
       {% include feature.html
       title="Workshops for Organizations & Teams"
