adds more heading work

--- a/learn.html
+++ b/learn.html
@@ -22,7 +22,6 @@ cta_url="/contact"
 bg_class="bg-red"
 heading="Learn at Your Level"
 paragraphs="Whether you're new to tech or looking to grow your skills, our workshops meet you where you are. We create safe, engaging learning spaces for communities, organizations, and individuals who want to do more with digital tools."
-is_list=false
 cta_text="Book a Session"
 cta_url="/contact"
 %}
@@ -32,9 +31,10 @@ cta_url="/contact"
   <div class="container">
     {% include heading.html
     heading="Workshops for Organizations & Teams"
-    subheading="Equip your team with practical knowledge to use digital tools with confidence. From improving workflows with tools like Slack and Google Workspace to managing your website and building an engaged community through accessible, values-based social media."
+    paragraphs="Equip your team with practical knowledge to use digital tools with confidence. From improving workflows with tools like Slack and Google Workspace to managing your website and building an engaged community through accessible, values-based social media."
     %}
-
+  </div>
+  <div class="container">
     <div class="bento-container">
       {% include feature.html
       title="Workshops for Organizations & Teams"
@@ -71,7 +71,6 @@ cta_url="/contact"
 bg_class="bg-red"
 heading="Customized for Your Community"
 paragraphs="Every organization is different. That's why we tailor each workshop to fit your audience, goals, and values. Whether you're a grassroots collective, a nonprofit team, or a group of elders and youth, we adapt our content and delivery to meet your needs."
-is_list=false
 %}
 
 <!-- CTA Section -->
