--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ bg_class="bg-red"
 heading="Welcome to Rize Digital!"
 subheading="Tech that gets it"
 paragraphs="We're a digital support studio rooted in community and culture. From websites to workshops to strategy, we help you navigate tech with confidence, clarity, and purpose. We don't do generic—we build digital spaces that reflect who you are and where you're going."
-is_list=false
-cta_text="Learn More About"
+cta_text="Learn More"
 cta_url="#features"
 %}
 
@@ -34,7 +33,6 @@ cta_url="#features"
 bg_class="bg-light"
 heading="What We Offer"
 subheading="Build Your Digital Home"
-is_list=true
 paragraphs="Establish a strong, welcoming digital presence|Reach and engage their audience through thoughtful strategy|Navigate tech with confidence—no matter their experience level|Find the right tools that match their needs, values, and budget"
 %}
 
