Adds better feature styling

--- a/build.html
+++ b/build.html
@@ -10,7 +10,7 @@ og_image: /assets/images/og-build.jpg
 ---
 <!-- Hero -->
 {% include hero.html
-title="Take up space"
+title="Let's Build"
 subtitle="Get your website, e-commerce, and digital precense up and running with guidance from our team."
 image="/assets/images/pages/build/hero-build.jpg"
 %}
@@ -19,8 +19,9 @@ image="/assets/images/pages/build/hero-build.jpg"
 <section class="bg-red">
   <div class="container ">
     {% include heading.html
-    heading="Why Rize?"
-    subheading="We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to 'do it all' — and we build websites that work for real people, not just ideal scenarios."
+    heading="Take Up Space"
+    paragraphs="We build with care, cultural understanding, and long-term sustainability in mind. We know the challenges of limited resources, shifting capacity, and needing to 'do it all' — and we build websites that work for real people, not just ideal scenarios."
+    list="Starter sites for simple, clean online presence|Multi-page sites for organizations and teams|Custom builds for complex needs or integrations"
     %}
   </div>
 </section>
@@ -29,44 +30,65 @@ image="/assets/images/pages/build/hero-build.jpg"
 <section>
   <div class="container column">
     {% include heading.html
-    heading="Let's Build"
-    subheading="Whether you're a nonprofit, a small business, or a community-led project, we'll help you create a digital space that reflects your mission, grows with you, and feels welcoming to your audience."
+    heading="Web Development Services"
+    paragraphs="A powerful website helps you show up, speak clearly, and move with purpose. Whether you're starting from scratch or evolving your digital presence, we'll help you build something that works hard and feels like you."
     %}
-    <p>
-      We don't just build beautiful websites—we make sure you understand how to manage and update them, so you can stay in control of your presence online.
-    </p>
+  </div>
+  <div class="container">
     <div class="bento-container">
       {% include feature.html
-      title="Custom Websites"
-      description="Responsive, accessible websites for nonprofits, community organizations, Indigenous businesses, and purpose-driven entrepreneurs. Built on WordPress, Shopify, or static site generators like Jekyll. Designed with performance, accessibility, and storytelling in mind. Mobile-friendly, easy to update, and optimized for search."
+      title="Build the Right Site for Your Needs"
+      description="We offer packages for small businesses, nonprofits, and creatives at every stage."
+      list="Starter sites for simple, clean online presence|Multi-page sites for organizations and teams|Custom builds for complex needs or integrations"
       image="/assets/images/pages/build/digital-presence.jpg"
       image_alt="Community Partnerships"
-      button_text="Explore Our Services"
-      button_url="/services"
+      button_text="Start Your Site"
+      button_url="/connect"
       feature_class="reverse bg-dark"
       %}
 
       {% include feature.html
-      title="E-Commerce"
-      description="Online stores that are clear, efficient, and aligned with your values. Setup and training with Shopify. Digital product integration and fulfillment support. Accessible and culturally respectful storefronts."
+      title="Sell Online Without the Stress"
+      description="We set up e-commerce that fits your brand and your workflow."
+      list="Shopify site setup and training|Support for digital products, subscriptions, and more|Clean, accessible storefronts with heart"
       image="/assets/images/pages/build/e-commerce.jpg"
       image_alt="Community Partnerships"
-      button_text="Learn More"
-      button_url="#"
+      button_text="Launch Your Shop"
+      button_url="/connect"
       %}
 
       {% include feature.html
-      title="Apps & Tools"
-      description="Simple custom tools and web apps to support your unique needs. Lightweight, purpose-built solutions for internal or public use. Tailored to support organizational workflows."
+      title="Choose the Right CMS"
+      description="Get expert support and setup with your preferred content platform."
+      list="WordPress (themes, plugins, full customization)|Sanity, Contentful, and other headless CMS options|Training so your team stays in control"
       image="/assets/images/pages/build/apps.jpg"
       image_alt="Community Partnerships"
-      button_text="Learn More"
-      button_url="#"
+      button_text="Pick Your Platform"
+      button_url="/connect"
       feature_class="reverse bg-dark"
+      %}
+
+      {% include feature.html
+      title="Custom App Development"
+      description="Got a big idea or tool you need built? We design lightweight apps to improve your workflow or deliver something interactive for your audience."
+      list="Dashboards, booking systems, directories, and more|Tailored solutions for your org or community|Designed to fit into your existing systems"
+      image="/assets/images/pages/build/apps.jpg"
+      image_alt="Community Partnerships"
+      button_text="Build an App"
+      button_url="/connect"
+      feature_class="bg-dark"
       %}
     </div>
   </div>
 </section>
+
+{% include section-centered.html
+bg_class="bg-light"
+heading="What's Under the Hood"
+paragraphs="Every website we build is designed to do more than just look good. We make sure your site is fast, findable, accessible, and manageable—so you stay in control."
+list="Accessibility – Inclusive by design, so everyone can use your site|SEO & AEO – Built to be discoverable by search engines and voice tools|CMS Integration – Manage your content without relying on a developer|Localization – Multilingual support for broader community reach
+|Performance – Fast load times and mobile-first design|Security – Safe, reliable, and built for peace of mind"
+%}
 
 <!-- Section -->
 <section class="bg-light">
@@ -86,7 +108,7 @@ image="/assets/images/pages/build/hero-build.jpg"
 <!-- CTA Section -->
 {% include cta.html
 title="Ready to bring your vision online?"
-text="Whether you're launching a new website, setting up an online shop, or rebuilding your digital presence with accessibility in mind — we're here to help you build something strong, beautiful, and easy to manage."
-button_text="Start Your Build"
+text="Let's build something that's easy to use, true to your vision, and built to grow with you."
+button_text="Work With Us"
 link="/connect?type=build"
 %}
