adds content to the build page

--- a/build.html
+++ b/build.html
@@ -51,7 +51,7 @@ image="/assets/images/pages/build/hero-build.jpg"
       title="Sell Online Without the Stress"
       description="We set up e-commerce that fits your brand and your workflow."
       list="Shopify site setup and training|Support for digital products, subscriptions, and more|Clean, accessible storefronts with heart"
-      image="/assets/images/pages/build/e-commerce.jpg"
+      image="/assets/images/pages/build/e-commerce2.jpg"
       image_alt="Community Partnerships"
       button_text="Launch Your Shop"
       button_url="/connect"
@@ -61,7 +61,7 @@ image="/assets/images/pages/build/hero-build.jpg"
       title="Choose the Right CMS"
       description="Get expert support and setup with your preferred content platform."
       list="WordPress (themes, plugins, full customization)|Sanity, Contentful, and other headless CMS options|Training so your team stays in control"
-      image="/assets/images/pages/build/apps.jpg"
+      image="/assets/images/pages/build/cms1.jpg"
       image_alt="Community Partnerships"
       button_text="Pick Your Platform"
       button_url="/connect"
@@ -90,20 +90,12 @@ list="Accessibility – Inclusive by design, so everyone can use your site|SEO &
 |Performance – Fast load times and mobile-first design|Security – Safe, reliable, and built for peace of mind"
 %}
 
-<!-- Section -->
-<section class="bg-light">
-  <div class="container">
-    <h2>Case Studies</h2>
-    <div class="coming-soon-container">
-      <p class="subtitle">
-        We're currently curating our portfolio of impactful projects. Check back soon to see how we've helped organizations like yours achieve their digital goals.
-      </p>
-      <p>
-        In the meantime, feel free to <a href="/connect?type=build" class="text-link">reach out</a> to discuss your project and see how we can help bring your vision to life.
-      </p>
-    </div>
-  </div>
-</section>
+{% include section-centered.html
+bg_class="bg-red"
+heading="Case Studies"
+subheading="Coming Soon"
+paragraphs="We're currently curating our portfolio of impactful projects. Check back soon to see how we've helped organizations like yours achieve their digital goals."
+%}
 
 <!-- CTA Section -->
 {% include cta.html
