--- a/connect.html
+++ b/connect.html
@@ -11,8 +11,8 @@ og_image: /assets/images/og-connect.jpg
 
 <!-- Hero -->
 {% include hero.html
-title="Let's Talk!"
-subtitle="If you're doing good work in your community, we want to hear from you. Let's explore how we can help you grow your impact through thoughtful digital support."
+title="Let's Start Something"
+subtitle="Have a project in mind or want to explore how we can work together? We’re here to listen, support, and help you take the next steps."
 image="/assets/images/pages/connect/connect.jpg"
 %}
 
@@ -25,6 +25,14 @@ image="/assets/images/pages/connect/connect.jpg"
     {% include social-links.html %}
   </div>
 </section>
+
+{% include section-centered.html
+bg_class="bg-red"
+heading="Our Mission"
+paragraphs="Rize Digital exists to bridge gaps in access, build digital confidence, and support people doing good work in their communities. We believe technology should be inclusive, approachable, and aligned with your values."
+cta_text="Explore AI Together"
+cta_url="/connect"
+%}
 
 <!-- Section - Values -->
 <section class="bg-light">
