adds a bunch of monbile stlye changes and some content editing on CTAs

--- a/build.html
+++ b/build.html
@@ -27,7 +27,7 @@ image="/assets/images/pages/build/hero-build.jpg"
 </section>
 
 <!-- Section - What We Do -->
-<section>
+<section class="bg-light">
   <div class="container column">
     {% include heading.html
     heading="Web Development Services"
@@ -55,6 +55,7 @@ image="/assets/images/pages/build/hero-build.jpg"
       image_alt="Community Partnerships"
       button_text="Launch Your Shop"
       button_url="/connect"
+      feature_class="bg-dark"
       %}
 
       {% include feature.html
@@ -99,7 +100,7 @@ paragraphs="We're currently curating our portfolio of impactful projects. Check 
 
 <!-- CTA Section -->
 {% include cta.html
-title="Ready to bring your vision online?"
+title="Bring your vision online"
 text="Let's build something that's easy to use, true to your vision, and built to grow with you."
 button_text="Work With Us"
 link="/connect?type=build"
