--- a/connect.html
+++ b/connect.html
@@ -120,7 +120,7 @@ cta_url="/connect"
 
 <!-- CTA Section -->
 {% include cta.html
-title="Let's start with a conversation"
+title="Start a conversation"
 text="Have a project in mind? Curious how we might work together? Tell us what you're thinking — we'll follow up with next steps, resources, or a consultation."
 button_text="Start a Conversation"
 link="/connect?type=build"
