--- a/grow.html
+++ b/grow.html
@@ -89,7 +89,7 @@ cta_url="/connect"
 
 <!-- CTA Section -->
 {% include cta.html
-title="Ready to level up your systems?"
+title="Level up your systems"
 text="Let’s make your tools and strategy feel less overwhelming—and more aligned with your goals."
 button_text="Grow With Us"
 link="/connect?type=build"
