--- a/learn.html
+++ b/learn.html
@@ -27,7 +27,7 @@ cta_url="/contact"
 %}
 
 <!-- Section - Features -->
-<section>
+<section class="bg-light">
   <div class="container">
     {% include heading.html
     heading="Workshops for Organizations & Teams"
@@ -43,6 +43,7 @@ cta_url="/contact"
       image_alt="Team Workshop Session"
       button_text="Book a Team Session"
       button_url="/contact?type=team"
+      feature_class="bg-dark"
       %}
 
       {% include feature.html
@@ -62,6 +63,7 @@ cta_url="/contact"
       image_alt="Tech Skills Training"
       button_text="Start a Career-Focused Session"
       button_url="/contact?type=career"
+      feature_class="bg-dark"
       %}
     </div>
   </div>
