adds outline logo to footer, column alignment, moved what we do section down, changes to bento list styles

--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@ cta_text="Learn More"
 cta_url="#features"
 %}
 
-<!-- Section- Features -->
-{% include section-centered.html
-bg_class="bg-light"
-heading="What We Offer"
-subheading="Build Your Digital Home"
-paragraphs="Establish a strong, welcoming digital presence|Reach and engage their audience through thoughtful strategy|Navigate tech with confidence—no matter their experience level|Find the right tools that match their needs, values, and budget"
-%}
 
 <section>
   <div class="container-full-width">
@@ -105,6 +98,14 @@ paragraphs="Establish a strong, welcoming digital presence|Reach and engage thei
     </div>
   </div>
 </section>
+
+<!-- Section- Features -->
+{% include section-centered.html
+bg_class="bg-red"
+heading="What We Offer"
+subheading="Build Your Digital Home"
+list="Establish a strong, welcoming digital presence|Reach and engage their audience through thoughtful strategy|Navigate tech with confidence—no matter their experience level|Find the right tools that match their needs, values, and budget"
+%}
 
 <!-- CTA -->
 {% include cta.html
